--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,11 @@
 
 	<distributionManagement>
 		<repository>
-			<id>maven-releases</id>
+			<id>nexus-releases</id>
 			<url>http://65.0.138.113:8081/repository/maven-releases/</url>
 		</repository>
 		<snapshotRepository>
-			<id>maven-snapshots</id>
+			<id>nexus-snapshots</id>
 			<url>http://65.0.138.113:8081/repository/maven-snapshots/</url>
 		</snapshotRepository>
 	</distributionManagement>
